[gd_scene load_steps=23 format=3 uid="uid://d3y5dqpl0by0j"]

[ext_resource type="Script" path="res://characters/human_militia/human_militia.gd" id="1_ggmv3"]
[ext_resource type="Texture2D" uid="uid://0lxqgdswx3gd" path="res://aseprite/citizen/male.tres" id="2_jsvo2"]
[ext_resource type="Texture2D" uid="uid://dctyd0g154j53" path="res://aseprite/citizen/female.tres" id="3_r82yy"]
[ext_resource type="PackedScene" uid="uid://bqig7thhar84r" path="res://characters/human_militia/militia_spear_attack.tscn" id="4_bgaui"]
[ext_resource type="PackedScene" uid="uid://bc7oaxyg4mtb6" path="res://scripts/Stats/StatsComponent.tscn" id="4_c540q"]
[ext_resource type="Script" path="res://scripts/Movement/movement_component.gd" id="5_ojoqp"]
[ext_resource type="PackedScene" uid="uid://dyj8580mnvnry" path="res://scripts/OrientationHandler.tscn" id="6_musuf"]
[ext_resource type="PackedScene" uid="uid://d0b10s33fdy8n" path="res://scripts/Detection/vision_component/vision_component.tscn" id="7_0gt6o"]
[ext_resource type="Script" path="res://scripts/Navigation/navigation_component.gd" id="8_sbaaj"]
[ext_resource type="Script" path="res://ai/hsm_debug.gd" id="9_akwm4"]
[ext_resource type="BehaviorTree" uid="uid://bnw1vcxcyoj0u" path="res://ai/trees/human_citizen/idle.tres" id="10_syx6v"]
[ext_resource type="BehaviorTree" uid="uid://b60rf2etvxe18" path="res://ai/trees/human_militia/militia_aggro.tres" id="12_cnuyu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wsf7e"]
height = 34.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qhu15"]
resource_local_to_scene = true
radius = 180.0

[sub_resource type="Animation" id="Animation_uqbtw"]
resource_name = "Idle"
length = 1.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_bxffr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_d5cdg"]
resource_name = "RunPanicked"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 3, 4]
}

[sub_resource type="Animation" id="Animation_e0o3c"]
resource_name = "Walk"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3rxky"]
_data = {
"Idle": SubResource("Animation_uqbtw"),
"RESET": SubResource("Animation_bxffr"),
"RunAway": SubResource("Animation_d5cdg"),
"Walk": SubResource("Animation_e0o3c")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m5g8q"]
resource_local_to_scene = true
size = Vector2(36, 2)

[sub_resource type="BlackboardPlan" id="BlackboardPlan_0bx61"]

[sub_resource type="BlackboardPlan" id="BlackboardPlan_oe6x5"]

[node name="Human Militia" type="CharacterBody2D" node_paths=PackedStringArray("orientation_handler", "vision_component", "aggro_timer", "aggro_hsm", "idle_state", "aggro_state", "root_sprite", "stats_component", "movement_component", "navigation_agent", "navigation_component", "primary_attack", "secondary_attack") groups=["Human"]]
collision_layer = 2
collision_mask = 3
motion_mode = 1
script = ExtResource("1_ggmv3")
orientation_handler = NodePath("OrientationHandler")
vision_component = NodePath("VisionComponent")
aggro_timer = NodePath("AggroTimer")
male_atlas = ExtResource("2_jsvo2")
female_atlas = ExtResource("3_r82yy")
aggro_hsm = NodePath("AggroLimboHSM")
idle_state = NodePath("AggroLimboHSM/IdleState")
aggro_state = NodePath("AggroLimboHSM/AggroState")
root_sprite = NodePath("Sprite2D")
stats_component = NodePath("StatsComponent")
movement_component = NodePath("MovementComponent")
navigation_agent = NodePath("NavigationAgent2D")
navigation_component = NodePath("NavigationComponent")
primary_attack = NodePath("MilitiaSpearAttack")
secondary_attack = NodePath("MilitiaSpearAttack")

[node name="Hurtbox" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_wsf7e")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, 0)
texture = ExtResource("2_jsvo2")
hframes = 5

[node name="StatsComponent" parent="." node_paths=PackedStringArray("root") instance=ExtResource("4_c540q")]
root = NodePath("..")
max_speed = Vector2(128, 128)

[node name="MovementComponent" type="Node" parent="." node_paths=PackedStringArray("body", "stats_component")]
script = ExtResource("5_ojoqp")
body = NodePath("..")
stats_component = NodePath("../StatsComponent")
friction = 128.0

[node name="OrientationHandler" parent="." node_paths=PackedStringArray("body") instance=ExtResource("6_musuf")]
body = NodePath("..")
nodes_to_flip = Array[NodePath]([NodePath("../Sprite2D"), NodePath("../Hurtbox")])

[node name="VisionComponent" parent="." instance=ExtResource("7_0gt6o")]
vision_distance = 180.0
target_layers = Array[int]([2])
occlusion_layers = Array[int]([1])

[node name="Area2D" parent="VisionComponent" index="0"]
collision_mask = 16

[node name="CollisionShape2D" parent="VisionComponent/Area2D" index="0"]
shape = SubResource("CircleShape2D_qhu15")

[node name="DetectionRaycaster" parent="VisionComponent" index="1"]
collision_layers = Array[int]([5, 1])

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
simplify_path = true

[node name="NavigationComponent" type="Node2D" parent="." node_paths=PackedStringArray("root", "navigation_agent")]
script = ExtResource("8_sbaaj")
root = NodePath("..")
navigation_agent = NodePath("../NavigationAgent2D")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3rxky")
}

[node name="MilitiaSpearAttack" parent="." node_paths=PackedStringArray("user") instance=ExtResource("4_bgaui")]
user = NodePath("..")

[node name="Hitbox" parent="MilitiaSpearAttack/WeaponArea2D" index="0"]
shape = SubResource("RectangleShape2D_m5g8q")

[node name="AggroTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="AggroLimboHSM" type="LimboHSM" parent="."]
script = ExtResource("9_akwm4")

[node name="IdleState" type="BTState" parent="AggroLimboHSM"]
behavior_tree = ExtResource("10_syx6v")
blackboard_plan = SubResource("BlackboardPlan_0bx61")

[node name="AggroState" type="BTState" parent="AggroLimboHSM"]
behavior_tree = ExtResource("12_cnuyu")
blackboard_plan = SubResource("BlackboardPlan_oe6x5")

[editable path="VisionComponent"]
[editable path="MilitiaSpearAttack"]
